# ostrich

./: .coveragerc  AUTHORS  ChangeLog  README.rst  emitters.py  openstack-details  ostrich  requirements.txt  runner.py  setup.cfg  steps.py  test-requirements.txt  tested.json  tox.ini
helpers/: add-ironic-to-nova-venv  build-ipa  buildroot-config  buildroot-kernel-config  lxc-details  lxc-ifup  openstack-details  openstack-details-ironic  os-cmd  os-cmd-bootstrap  setup-ephyra  setup-neutron-ironic
ostrich/: emitters.py  ostrich.py  runner.py  stage_loader.py  steps.py  utils.py
ostrich/stages/: repeated.py  stage_00_before_anything.py  stage_10_user_questions.py  stage_11_ironic_questions.py  stage_12_enable_process_tracing.py  stage_20_apt.py  stage_30_checkout_osa.py  stage_30_clone_osa.py  stage_31_checkout_osa.py  stage_40_enable_proxies.py  stage_50_configure_osa.py  stage_60_bootstrap.py  stage_70_user_variables.py  stage_71_ironic_networking.py  stage_80_final_configuration.py  stage_90_change_to_osa_dir.py  stage_90_install.py  stage_91_install.py  stage_92_finalize.py  stage_93_debug_output.py
ostrich/stages-disabled/: stage_90_ephyra_setup.py  stage_95_ephyra_setup.py
ostrich/tests/unit/: state.json  test_stage_00_before_anything.py  utils.py  (+4 more)
patches/: ceph-global-pg_num  cinder-constraints-mitaka  ironic-agent-logs  ironic-aio-mitaka  ironic-pxe-options  ironic-pxe-options-newton  ironic-tftp-address  ironic-vip-address  ironic-vip-address-ocata  lxc-hosts-ucf-non-interactive  lxc-hosts-ucf-non-interactive-newton  lxc-hosts-ucf-non-interactive-ocata
