[metadata]
name = ostrich
author = Michael Still
author-email = mikal@stillhq.com
summary = An automated openstack-ansible installer
description-file =
    README.rst
home-page = https://github.com/mikalstill/ostrich
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    ostrich

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    ostrich = ostrich.ostrich:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1
